# graphiti

./: README.md
.github/workflows/: lint.yml  release-grpc-server-container.yml  typecheck.yml  unit_tests.yml
grpc_server/: Makefile  README.md  pyproject.toml
grpc_server/config/: config-auth-example.yaml  config-docker-falkordb.yaml  config-docker-neo4j.yaml  config-tls.yaml  config.yaml
grpc_server/docker/: Dockerfile  README.md  docker-compose-falkordb.yml  docker-compose-neo4j.yml  docker-compose.tls.yml  docker-compose.yml
grpc_server/docker/certs/: .gitignore  generate-certs.sh
grpc_server/docs/: API.md  authentication.md
grpc_server/protos/: buf.yaml
grpc_server/protos/graphiti/v1/: admin_service.proto  common.proto  edges.proto  ingest_service.proto  nodes.proto  retrieve_service.proto  search.proto
grpc_server/src/: __init__.py  main.py
grpc_server/src/config/: __init__.py  schema.py
grpc_server/src/converters/: __init__.py  edge_converters.py  node_converters.py  search_converters.py
grpc_server/src/interceptors/: __init__.py  auth_interceptor.py  error_interceptor.py  logging_interceptor.py  rate_limit_interceptor.py  timeout_interceptor.py  tracing_interceptor.py
grpc_server/src/services/: __init__.py  admin_service.py  base.py  ingest_service.py  retrieve_service.py
grpc_server/src/utils/: __init__.py  factories.py  queue_service.py
grpc_server/tests/: __init__.py  conftest.py  test_auth_interceptor.py  test_main.py
grpc_server/tests/config/: test_schema.py
grpc_server/tests/converters/: __init__.py  test_edge_converters.py  test_node_converters.py  test_search_converters.py
grpc_server/tests/interceptors/: __init__.py  conftest.py  test_error_interceptor.py  test_logging_interceptor.py  test_rate_limit_interceptor.py  test_timeout_interceptor.py  test_tracing_interceptor.py
grpc_server/tests/services/: test_admin_service.py  test_ingest_service.py  test_retrieve_service.py
grpc_server/tests/utils/: test_queue_service.py
mcp_server/: pyproject.toml
mcp_server/src/config/: schema.py
mcp_server/src/utils/: utils.py
mcp_server/tests/: test_configuration.py
server_common/: pyproject.toml  pytest.ini
server_common/src/server_common/: __init__.py  factories.py
server_common/src/server_common/config/: __init__.py
server_common/tests/: __init__.py  conftest.py  test_config.py  test_factories.py
