[project]
name = "graphiti-server-common"
version = "0.1.0"
description = "Shared utilities for Graphiti servers (gRPC, MCP, REST)"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Zep Software, Inc." }]

dependencies = [
    "graphiti-core>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
azure = ["azure-identity>=1.15.0"]
anthropic = ["anthropic>=0.18.0"]
gemini = ["google-generativeai>=0.5.0"]
groq = ["groq>=0.4.0"]
voyage = ["voyageai>=0.2.0"]
providers = [
    "graphiti-server-common[azure,anthropic,gemini,groq,voyage]",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.350",
    "graphiti-server-common[providers]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server_common"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "single"
